# lotus-notebook

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  README.md
assets/: lotus.desktop
python_modules/: lotus_runtime.py
scripts/: install.sh  uninstall.sh
src/: backupmanager.cpp  backupmanager.h  cellwidget.cpp  cellwidget.h  codecompleter.cpp  codecompleter.h  commandpalette.cpp  commandpalette.h  main.cpp  mainwindow.cpp  mainwindow.h  notebookmanager.cpp  notebookmanager.h  pythonexecutor.cpp  pythonexecutor.h  settingsdialog.cpp  settingsdialog.h  syntaxhighlighter.cpp  syntaxhighlighter.h  thememanager.cpp  thememanager.h  variableinspector.cpp  variableinspector.h
